# processd

./: Cargo.toml  flake.nix  implementation.md  processd.md
docs/: graph.md
processctl/: Cargo.toml
processd/: Cargo.toml
processd-core/: Cargo.toml
processd-core/src/: config.rs  error.rs  graph.rs  lib.rs
processd/src/: main.rs
