[workspace]
members = [
    "processd",
    "processctl",
    "processd-core",
]
resolver = "2"

[workspace.dependencies]
nix       = { version = "0.29", features = ["process", "signal", "user", "mount", "event", "fs"] }
serde     = { version = "1",    features = ["derive"] }
toml      = "0.8"
thiserror = "2"
clap      = { version = "4",    features = ["derive"] }
serde_json = "1"
processd-core = { path = "processd-core" }
