[package]
name    = "processd"
version = "0.1.0"
edition = "2021"

[dependencies]
processd-core = { workspace = true }
nix           = { workspace = true }
serde         = { workspace = true }
toml          = { workspace = true }
thiserror     = { workspace = true }
serde_json    = { workspace = true }
